--- a/scroll.html
+++ b/scroll.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>scrollpay</title>
         <style>
@@ -26,7 +26,6 @@
                 z-index: 100;
            }
            .header-container{
-               margin-left: 4rem;
                margin-left: 4rem;
                display: flex;
                justify-content: space-between;
